some minor updates

--- a/measuring-instruments-management/src/app/component/header/header.component.html
+++ b/measuring-instruments-management/src/app/component/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" (click)="reloadPage()">
         <i class="fa-solid fa-scale-unbalanced me-2 fs-4"></i>
-        <span>Quản lý thiết bị đo lường</span>
+        <span>QUẢN LÝ TRANG BỊ ĐO LƯỜNG - THỬ NGHIỆM</span>
       </a>
     </div>
   </nav>
