--- a/measuring-instruments-management/src/app/module/feature/instrument/component/attached-document-create/attached-document-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/attached-document-create/attached-document-create.component.html
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-dialog-scrollable modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">Thêm mới tài liệu đi kèm</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Thêm mới Tài liệu, dụng cụ, phụ tùng kèm theo</h1>
         <button type="button"
                 class="btn-close"
                 id="attached-document-create-modal-close-btn"
@@ -31,7 +31,7 @@
 
           <div class="mb-3">
             <label for="document-symbol" class="form-label">Ký hiệu
-              <sup class="text-danger fw-bold">*</sup></label>
+              </label>
             <input id="document-symbol"
                    type="text"
                    class="form-control"
@@ -47,7 +47,7 @@
 
           <div class="mb-3">
             <label for="quantity" class="form-label">Số lượng
-              <sup class="text-danger fw-bold">*</sup></label>
+              </label>
             <input id="quantity"
                    type="number"
                    class="form-control"
