--- a/measuring-instruments-management/src/app/module/feature/instrument/component/document-volatility-create/document-volatility-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/document-volatility-create/document-volatility-create.component.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-dialog-scrollable modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Thêm mới biến động tài liệu</h1>
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Thêm mới Theo dõi biến động tài liệu, phụ tùng và kiểm kê hàng năm</h1>
                 <button type="button"
                         class="btn-close"
                         id="document-volatility-create-modal-close-btn"
