--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
@@ -17,7 +17,7 @@
         </div>
       </th>
       <th scope="col" class="col-1">STT</th>
-      <th scope="col" class="col-3">Tên</th>
+      <th scope="col" class="col-3">Tên trang bị ĐL-TN</th>
       <th scope="col" class="col-2">Ký hiệu</th>
       <th scope="col" class="col-2">Số hiệu</th>
       <!-- <th scope="col" class="col-1">Nhóm</th>
