--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-update/instrument-update.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-update/instrument-update.component.html
@@ -1,5 +1,5 @@
 <h3 class="text-center mb-5 mt-3"
-    style="min-width: 782px; font-size: 32px;">Chỉnh sửa phương tiện</h3>
+    style="min-width: 782px; font-size: 32px;">CHỈNH SỬA THÔNG TIN TRANG BỊ ĐO LƯỜNG - THỬ NGHIỆM</h3>
 
 <form *ngIf="mainForm"
       class="w-75 m-auto"
