--- a/measuring-instruments-management/src/app/module/feature/instrument/component/attached-document-update/attached-document-update.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/attached-document-update/attached-document-update.component.html
@@ -31,7 +31,7 @@
 
           <div class="mb-3">
             <label for="document-symbol" class="form-label">Ký hiệu
-              <sup class="text-danger fw-bold">*</sup></label>
+              </label>
             <input id="document-symbol"
                    type="text"
                    class="form-control"
@@ -47,7 +47,7 @@
 
           <div class="mb-3">
             <label for="quantity" class="form-label">Số lượng
-              <sup class="text-danger fw-bold">*</sup></label>
+              </label>
             <input id="quantity"
                    type="number"
                    class="form-control"
