--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -7,9 +7,11 @@
               [class.bg-warning]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Sửa chữa'"
               [class.bg-primary]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Kiểm định'">
         {{measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName}}</span>
-        <button class="btn btn-outline-primary float-end me-4">Tạo dữ liệu nạp mã QR
-        </button>
         <button class="btn btn-outline-primary float-end me-4">Tạo dữ liệu nạp chip NFC
+        </button>
+        <button class="btn btn-outline-primary float-end me-4" 
+        data-bs-toggle="modal" data-bs-target="#instrument-detail-qr-code"
+        >Tạo dữ liệu nạp mã QR
         </button>
         <button class="btn btn-outline-primary float-end me-4"
                 [routerLink]="'/instruments/update/' + measuringInstrumentDetailDto?.id">
@@ -135,15 +137,16 @@
                     </div>
                 </li>
             </ul>
+            <div id="instrument-detail-description-container">
+                <p class="mb-3 mt-3">
+                    <span class="px-3 py-2 d-inline-block rounded user-select-none"><strong>Ghi chú: </strong></span>
+                </p>
+                <p class="pe-4"
+                   style="text-indent: 40px; text-align: justify">{{measuringInstrumentDetailDto?.detailedDescription}}</p>
+            </div>
         </div>
     </div>
-    <div id="instrument-detail-description-container">
-        <p class="mb-3">
-            <span class="px-3 py-2 d-inline-block rounded bg-body-secondary user-select-none">Ghi chú</span>
-        </p>
-        <p class="pe-4"
-           style="text-indent: 40px; text-align: justify">{{measuringInstrumentDetailDto?.detailedDescription}}</p>
-    </div>
+    
 </div>
 
 <div class="mt-5 pe-3 position-relative pt-5">
@@ -610,3 +613,6 @@
         [documentVolatilityId]="documentVolatilityIdUpdate"
         (emitResult)="checkResult('document-volatility', $event)"
 ></app-document-volatility-update>
+<app-instrument-detail-qr-code
+        [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+></app-instrument-detail-qr-code>
