--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-update/instrument-repair-update.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-update/instrument-repair-update.component.html
@@ -101,7 +101,7 @@
             <div class="mb-3 col-12 pe-1">
               <label for="repair-reason" class="form-label"
                 >Nguyên nhân hư hỏng
-                <sup class="text-danger fw-bold">*</sup></label
+                </label
               >
               <textarea
                 id="repair-reason"
