feat: generate tracking info of specific instrument

--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-accreditation-create/instrument-accreditation-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-accreditation-create/instrument-accreditation-create.component.html
@@ -76,7 +76,7 @@
                 id="accreditation-place"
                 type="text"
                 class="form-control"
-                placeholder="Nhập người sử dụng"
+                placeholder="Nhập nơi kiểm định"
                 formControlName="accreditationPlace"
                 [ngClass]="{
                   'is-invalid':
