--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-create/instrument-repair-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-create/instrument-repair-create.component.html
@@ -169,7 +169,7 @@
                 id="repair-place"
                 type="text"
                 class="form-control"
-                placeholder="Nhập người sử dụng"
+                placeholder="Nhập nơi sửa chữa"
                 formControlName="repairPlace"
                 [ngClass]="{
                   'is-invalid':
